# bspwm-VoidShell

./: AGENTS.md  Cargo.toml  README.md
data/: io.github.voidscripter.TermVoid.desktop  io.github.voidscripter.TermVoid.metainfo.xml
scripts/: build-windows-gnu.sh
src/: banner.rs  config.rs  constants.rs  context.rs  history.rs  layout.rs  main.rs  preferences.rs  preferences_windows.rs  quick_actions.rs  system_info.rs  terminal_pane.rs  terminal_pane_windows.rs  theme.rs  util.rs  window.rs
